Update copyright info, fix broken links
Update copyright info, fix broken links

--- a/privacy.html
+++ b/privacy.html
@@ -175,7 +175,7 @@
 					your personal information.</p>
 
 					<p><u>CHOICE AND OPT-OUT</u>.	If you no longer wish to receive a particular newsletter and promotional communication, you may opt out of receiving it
-					by following the instructions	included in each respective newsletter or communication, or by accessing Synopsys' <a href="https://www.synopsys.com/apps/subcenter/req1.php">Subscriptions Center</a>.</p>
+					by following the instructions	included in each respective newsletter or communication, or by accessing Synopsys' <a href="https://online.synopsys.com/contact-form-subscription-center.html">Manage Email Subscription</a>.</p>
 					Please note that other data recipients have their own data privacy policies, which may differ from ours, and you would have to contact them separately
 					with respect to opt-out requests.</p>
 
@@ -217,7 +217,7 @@
 		    <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 			</ul>
 			<ul class="copyright">
-					<li>&copy; 2019 Synopsys, Inc. All Rights Reserved.</li>
+					<li>&copy; 2019-2021 Synopsys, Inc. All Rights Reserved.</li>
 					<li>
 						<a href="resources.html#about">About</a> |
 						<a href="mailto:info@embarc.org">Contact Us</a> |
