--- a/privacy_EEA.html
+++ b/privacy_EEA.html
@@ -154,7 +154,7 @@
 					for the registration. Only upon such confirmation will the registration become effective and will we send newsletters or similar information to the confirmed email address.</p>
 
 					<p>When registering to receive newsletters or similar information, you explicitly declare your consent to our processing of your personal data for this purpose. You are under no obligation to provide such
-					consent and, if you choose to do so nonetheless, you may withdraw your consent at any time, with future effect and for any or no reason by accessing Synopsys’ <a href="https://www.synopsys.com/apps/subcenter/req1.php">Subscriptions Center</a>
+					consent and, if you choose to do so nonetheless, you may withdraw your consent at any time, with future effect and for any or no reason by accessing Synopsys’ <a href="https://online.synopsys.com/contact-form-subscription-center.html">Manage Email Subscription</a>
 					or by following	the unsubscribe link contained in any email communication sent to you.</p>
 
 					<p><strong>RECIPIENTS OF YOUR PERSONAL DATA</strong></p>
@@ -235,7 +235,7 @@
 		    <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 			</ul>
 			<ul class="copyright">
-					<li>&copy; 2019 Synopsys, Inc. All Rights Reserved.</li>
+					<li>&copy; 2019-2021 Synopsys, Inc. All Rights Reserved.</li>
 					<li>
 						<a href="resources.html#about">About</a> |
 						<a href="mailto:info@embarc.org">Contact Us</a> |
