--- a/linux.html
+++ b/linux.html
@@ -266,7 +266,7 @@
 					</li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; 2019 Synopsys, Inc. All Rights Reserved.</li>
+					<li>&copy; 2019-2021 Synopsys, Inc. All Rights Reserved.</li>
 					<li>
 						<a href="resources.html#about">About</a> |
 						<a href="mailto:info@embarc.org">Contact Us</a> |
