--- a/terms.html
+++ b/terms.html
@@ -157,7 +157,7 @@
 		    <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 		  </ul>
 			<ul class="copyright">
-				<li>&copy; 2019 Synopsys, Inc. All Rights Reserved.</li>
+				<li>&copy; 2019-2021 Synopsys, Inc. All Rights Reserved.</li>
 				<li>
 					<a href="resources.html#about">About</a> |
 					<a href="mailto:info@embarc.org">Contact Us</a> |
